# life-management-system

./: .dockerignore  .env.example  .gitignore  .nojekyll  .railwayignore  .vercelignore  CHANGELOG.md  CLAUDE.md  DEPLOY.md  DEPLOYMENT_STATUS.md  DEPLOY_INSTRUCTIONS.md  Dockerfile  GITHUB_DEPLOYMENT.md  IMPROVEMENTS.md  MANUAL_DEPLOY_GUIDE.md  NEXT_STEPS.md  QUICK_DEPLOY.md  QUICK_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_SETUP.md  README.md  README_CN.md  README_FIXED.md  VERIFY_RAILWAY_TOKEN.md  _config.yml  app.py  claude_changelog.md  database_schema.md  debug.html  deploy_to_railway.py  deployment_guide.md  emergency-index.html  fastapi_architecture.md  frontend_architecture.md  index.html  local.html  main.py  main_simple.py  ontology_models.md  package.json  (+21 more)
.github/workflows/: deploy-frontend.yml  deploy-pages.yml  deploy.yml
.railway/: project
.vercel/: project.json
api/: README.md  health.py  index.py  main.py  requirements.txt  tasks.py
backend/: main.py  main_simple.py  requirements.txt  vercel.json
backend/ai/: semantic_encoder.py
backend/api/: database_cloud.py  main.py
backend/core/: models.py
backend/pipeline/: scheduler.py
backend/utils/: database.py
data/: life_management.db
docs/: app-full.html  app.js  clear-cache.html  config.js  css-test.html  index.html  manifest.json  no-cache.html  styles.css  sw.js  tasks-data.json  theme-dark.css  theme-default.css  version.html  versions.html
docs/css/: theme-light.css
docs/js/: app.js  config.js  sw.js
docs/js/modules/: api.js  task-manager.js  task-processor.js  theme-manager.js
docs/styles/: mobile.css  theme-dark.css  theme-default.css
electron/: error.html  main.js  preload.js
frontend/: index.html  manifest.json  tasks-data.json
frontend/css/: theme-light.css
frontend/js/: app.js  config.js  sw.js
js/: app.js
js/modules/: api 2.js  notification-manager.js
scripts/: deploy-github-pages.sh  deploy-vercel.sh  run-local.sh
src/: __init__.py
src/ai/: deepseek_agent.py
src/api/: auth.py  main.py
src/core/: models.py
src/frontend/static/: app.js  theme-dark.css  theme-default.css  theme-modernist.css
src/frontend/templates/: index.html
src/utils/: database.py
static/: app.js  index.html  styles.css  sw.js  tasks-data.json  theme-default.css
